--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,6 +1,6 @@
 {
   "$schema": "node_modules/wrangler/config-schema.json",
-  "name": "webapp",
+  "name": "usk-liberia",
   "compatibility_date": "2025-12-16",
   "pages_build_output_dir": "./dist",
   "compatibility_flags": [
